--- a/style.css
+++ b/style.css
@@ -14,3 +14,37 @@
   box-shadow: 0px 0px 5px #333;
   background-color: #eb583c;
 }
+
+.topBar-main {
+  width: 100%;
+}
+
+.topBar-main span {
+  color: #fff;
+}
+
+.topBar-main .topBar-close{
+  position: absolute;
+  margin-left: 10px;
+  padding: 5px 7px;
+  top: 18%;
+  right: 13px;
+  font-family: sans-serif;
+  font-size: 80%;
+  color: #eb583c;
+  text-decoration: none;
+  text-align: center;
+  background-color: #AA3C19;
+  border-radius: 50%;
+  }
+
+.topBar-lever {
+  position: absolute;
+  top: 0;
+  left: auto !important;
+  right: 8px;
+  border-right: 3px solid #fff;
+  border-left: 3px solid #fff;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
