--- a/style.css
+++ b/style.css
@@ -49,3 +49,8 @@
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+
+.topBar-lever a {
+  color: #fff;
+  text-decoration: none;
+}
