--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+.content-wrapper {
+  margin: 0 auto;
+  width: 25%;
+}
+
 .topBar {
   display: none;
   position: absolute;
